--- a/mavenExampleJDBC/src/main/java/co/edu/sena/ExampleJDBC/ExampleDB/View/JFrameEmployee.form
+++ b/mavenExampleJDBC/src/main/java/co/edu/sena/ExampleJDBC/ExampleDB/View/JFrameEmployee.form
@@ -75,7 +75,7 @@
                                       </Group>
                                       <Group type="102" attributes="0">
                                           <Component id="jButtonInsert" min="-2" max="-2" attributes="0"/>
-                                          <EmptySpace max="32767" attributes="0"/>
+                                          <EmptySpace pref="126" max="32767" attributes="0"/>
                                           <Component id="jButtonUpdate" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
